--- a/share/man/man4/man4.sgi/ioc.4
+++ b/share/man/man4/man4.sgi/ioc.4
@@ -27,7 +27,7 @@
 .Cd "dsrtc0 at ioc?"
 .Cd "iec* at ioc?"
 .Cd "onewire* at ioc?"
-.\" .Cd "iockbc* at ioc?"
+.Cd "iockbc* at ioc?"
 .\" .Cd "pciide* at ioc?"
 .Sh DESCRIPTION
 The
@@ -44,8 +44,8 @@ Two serial ports.
 Time-of-day chip.
 .It Xr iec 4
 10/100 Mbit/s Ethernet interface.
-.\" .It Xr iockbc 4
-.\" PS/2 keyboard and mouse interface.
+.It Xr iockbc 4
+PS/2 keyboard and mouse interface.
 .\" .It Xr pciide 4
 .\" PCI IDE controller driver.
 .El
@@ -64,7 +64,7 @@ interfaces.
 .Xr dsrtc 4 ,
 .Xr iec 4 ,
 .Xr intro 4 ,
-.\" .Xr iockbc 4 ,
+.Xr iockbc 4 ,
 .Xr onewire 4 ,
 .Xr owmac 4 ,
 .Xr owserial 4 ,
